# codexmcp

./: .gitignore  AGENTS.md  pyproject.toml
src/codexmcp/: server.py
