[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "codexmcp"
version = "0.7.4"
description = "FastMCP server wrapping the Codex CLI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.20.0",
    "pydantic>=2.0",
]
authors = [
    { name = "guda.studio", email = "gudaclaude@gmail.com" },
]
license = { text = "MIT" }
keywords = ["mcp", "fastmcp", "codex"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
codexmcp = "codexmcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codexmcp"]

[tool.hatch.build.targets.sdist]
include = ["src/codexmcp", "README.md", "LICENSE"]
